# stem-backend

./: .gitignore  Dockerfile  build.sh  docker-compose.yml  prompt_recherche_emploi  pyproject.toml  render.yaml  render.yml
stem_learning_app/: db.sqlite3  openai.response.json
stem_learning_app/accounts/: models.py  serializer.py  urls.py  views.py
stem_learning_app/accounts/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_alter_customuser_phone.py
stem_learning_app/config/: celery.py  settings.py  urls.py
stem_learning_app/cot_for_stem/: admin.py  models.py  serializer.py  urls.py  views.py
stem_learning_app/cot_for_stem/migrations/: 0001_initial.py
stem_learning_app/cot_for_stem/services/: analysis.py  openai_vision.py  prompts.py
