[project]
name = "stemlearningapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Leon OKOMBE",email = "okombeleonrobland@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==5.2.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "djangorestframework-simplejwt[crypto] (>=5.5.1,<6.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)"
]
